p2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app: app1
    type: webPage
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: app1
    type: webPage

---

apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
    type: webPage
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: app2
    type: webPage
---

apiVersion: v1
kind: Service
metadata:
  name: app3
  labels:
    app: app3
    type: webPage
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: app3
    type: webPage
